5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1764_1185.log
== SUBMITION (2019-05-28 16:36:42) 
-- CODE:
from numpy import*

x=array(eval(input("")))

co=0
co1=0

while(co<size(x)):
	if(x[i]>99):
		co1+=1
		print(co)
	co+=1
print(co1)
		
		
-- EXECUTION TIME:
0.533779
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1185/main.py", line 9, in <module>
    if(x[i]>99):
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:36:43) 
-- CODE:
from numpy import*

x=array(eval(input("")))

co=0
co1=0

while(co<size(x)):
	if(x[i]>99):
		co1+=1
		print(co)
	co+=1
print(co1)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:37:14) 
-- CODE:
from numpy import*

x=array(eval(input("")))

i=0
co1=0

while(i<size(x)):
	if(x[i]>99):
		co1+=1
		print(i)
	i+=1
print(co1)
		
		
-- EXECUTION TIME:
0.510776
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
